--- a/app/assets/style/style.scss
+++ b/app/assets/style/style.scss
@@ -11,7 +11,7 @@
   --darkYellow: #8f7000;
   --yellow: #f2df0c;
   --white: rgb(255, 255, 255);
-  --danger: rgb(225, 71, 71);
+  --danger: #d93d00;
   --font:
     -apple-system, 'BlinkMacSystemFont', 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', meiryo,
     sans-serif, 'Segoe UI Emoji';
@@ -105,6 +105,7 @@ a {
     font-size: 3em;
   }
   &.btn--danger {
+    color: var(--white);
     background-color: var(--danger);
     &:hover {
       opacity: 0.8;
